# lectures

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
include/: Entity.h  commons.h  log.h
src/: commons.cpp  log.cpp  main.cpp
